--- a/package.json
+++ b/package.json
@@ -5,89 +5,88 @@
   "author": "Zachary Seguin",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
+    "dev": "webpack serve --hot --mode development",
     "serve": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "devDependencies": {
-    "ajv": "^6.12.3",
-    "autoprefixer": "^9.8.4",
-    "babel-core": "^6.22.1",
+    "@popperjs/core": "^2.11.5",
+    "ajv": "^8.11.0",
+    "autoprefixer": "^10.4.7",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.2.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.15.0",
-    "bootswatch": "^4.5.0",
-    "chalk": "^2.4.2",
-    "color-convert": "^1.9.3",
-    "compression-webpack-plugin": "^6.1.1",
-    "convert-source-map": "^1.7.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
+    "bootstrap-vue": "^2.22.0",
+    "bootswatch": "^5.1.3",
+    "chalk": "^5.0.1",
+    "color-convert": "^2.0.1",
+    "compression-webpack-plugin": "^10.0.0",
+    "convert-source-map": "^1.8.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "file-loader": "^3.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^9.1.1",
+    "eslint-webpack-plugin": "^2.6.0",
+    "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "glob": "^7.1.6",
+    "glob": "^8.0.3",
     "he": "^1.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "intersection-observer": "^0.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "intersection-observer": "^0.12.0",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.mergewith": "^4.6.2",
     "loose-envify": "^1.4.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-notifier": "^9.0.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ora": "^3.4.0",
-    "popper.js": "^1.16.1",
-    "portfinder": "^1.0.26",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-url": "^8.0.0",
-    "qs": "^6.9.4",
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-notifier": "^10.0.1",
+    "node-sass": "^7.0.1",
+    "ora": "^6.1.0",
+    "portfinder": "^1.0.28",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^7.0.0",
+    "postcss-url": "^10.1.3",
+    "qs": "^6.10.5",
     "raven-js": "^3.27.2",
-    "rimraf": "^2.7.1",
-    "sass-loader": "^7.3.1",
-    "semver": "^5.7.1",
-    "shelljs": "^0.8.4",
-    "supports-color": "^6.1.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "url-loader": "^1.1.2",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^13.0.0",
+    "semver": "^7.3.7",
+    "shelljs": "^0.8.5",
+    "supports-color": "^9.2.2",
+    "terser-webpack-plugin": "^5.3.3",
+    "url-loader": "^4.1.1",
     "vue": "^2.6.11",
     "vue-functional-data-merge": "^2.0.7",
     "vue-loader": "^15.9.3",
     "vue-localstorage": "^0.6.2",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.3.4",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "vue2-filters": "^0.4.1",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "vue2-filters": "^0.14.0",
     "vuex": "^3.5.1",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-sources": "^1.4.3"
+    "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-sources": "^3.2.3"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -96,9 +95,9 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not dead"
   ],
   "dependencies": {
-    "urijs": "^1.19.2"
+    "urijs": "^1.19.11"
   }
 }
